<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.harshul.taskoo.HomeActivity">

        <TextView
            android:id="@+id/textViewHeading"
            style="@style/heading"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/tvTaskPending"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_image"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvTaskPending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/no_task"
            android:textColor="@color/main_color"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/textViewHeading"
            app:layout_constraintTop_toBottomOf="@+id/textViewHeading" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:elevation="8dp"
            android:src="@drawable/profile_pic_male"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupNoTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="constraintLayoutBanner,imageViewSpiral" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintVertical_bias="0.25">

            <ImageView
                android:id="@+id/imageViewBanner"
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/home_banner" />

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/montserrat_alternates_medium"
                android:text="@string/create_your_first_task"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewBanner" />

            <TextView
                android:id="@+id/tvSubHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_alternates"
                android:gravity="center"
                android:text="@string/create_task"
                android:textColor="@color/dark_grey"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeading" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/viewHorizontal"
            android:layout_width="100dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayoutBanner"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayoutBanner"
            app:layout_constraintStart_toStartOf="@+id/constraintLayoutBanner"
            app:layout_constraintTop_toTopOf="@+id/constraintLayoutBanner"
            app:layout_constraintVertical_bias="0.88" />

        <ImageView
            android:id="@+id/imageViewSpiral"
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/clBottomBar"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayoutBanner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/constraintLayoutBanner"
            app:layout_constraintTop_toTopOf="@+id/viewHorizontal"
            app:srcCompat="@drawable/spiral_2" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rectangle_rounded_grey"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:queryBackground="@android:color/transparent"
            app:queryHint="Search Task...." />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/clBottomBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBottomBar"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/bottom_bar_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/fab"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/circle_white"
                android:padding="6dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvAddTask"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAddTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_alternates_medium"
                android:text="@string/add_task"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fab"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>