<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheet"
        style="@style/Animation.Design.BottomSheetDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:behavior_hideable="false"
        app:behavior_peekHeight="@dimen/dimen_32"
        app:layout_behavior="com.google.android.material.bottom-sheet.BottomSheetBehavior">

        <View
            android:id="@+id/viewTop"
            android:layout_width="32dp"
            android:layout_height="4dp"
            android:layout_margin="8dp"
            android:background="@drawable/bottom_sheet_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/task"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewTop" />

        <TextView
            android:id="@+id/buttonProceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:background="@drawable/rectangle_rounded"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvLabel" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="32dp"
            android:background="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabel" />

        <EditText
            android:id="@+id/etTodo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:background="@null"
            android:fontFamily="@font/montserrat_alternates"
            android:hint="@string/enter_todo_hint"
            android:inputType="textCapSentences"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <EditText
            android:id="@+id/enter_todo_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:fontFamily="@font/montserrat_alternates"
            android:hint="@string/description"
            android:inputType="textCapSentences"
            android:textSize="@dimen/dimen_16"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/etTodo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPriority"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_todo_desc">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clPriority"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_sheet_bar">

                <TextView
                    android:id="@+id/tvHigh"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/main_color"
                    android:fontFamily="@font/montserrat_alternates_semibold"
                    android:gravity="center"
                    android:letterSpacing="0.1"
                    android:text="HIGH"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/dividerHz1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/dividerHz1"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/dividerHz2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvMedium"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:fontFamily="@font/montserrat_alternates_semibold"
                    android:gravity="center"
                    android:letterSpacing="0.1"
                    android:text="MEDIUM"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/dividerHz2"
                    app:layout_constraintStart_toStartOf="@+id/dividerHz1"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/dividerHz2"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/dividerHz1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvLow"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:fontFamily="@font/montserrat_alternates_semibold"
                    android:gravity="center"
                    android:letterSpacing="0.1"
                    android:text="LOW"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvMedium"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvPriority" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>